[package]
name = "mod_vig"
version = "0.1.0"
edition = "2021"
authors = ["Marty3000"]
description = "cli for a modernized Vigenere algorithm"
license = "MIT"
license-file = "LICENSE.txt"
repository = "https://github.com/Marty3000/mod_vig.git"
documentation = "https://docs.rs/mod_vig"
keywords = ["cli", "crypto", "encryption", "rustcrypto", "vigenere"]
categories = ["cryptography"]


[dependencies]
modernized_vigenere = { version = "0.1", path = "../modernized_vigenere" }
clap = { version = "3.1.12", features = ["derive"] }
